project-telegraf&influxdb/grafana/grafana-k8-dep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  # type: LoadBalancer
  selector:
    app: grafana
  ports:
    - name: http
      protocol: TCP
      port: 443
      targetPort: 3000
